--- a/halo/camera-hub.html
+++ b/halo/camera-hub.html
@@ -100,9 +100,9 @@
             </div>
             <div class="carousel-item banner-carousel banner-carousel--mrl"><img class="banner-carousel__img" src="img/camera-hub-img/portal-mrl-min.png" alt="">
               <div class="carousel-caption banner-carousel__caption font-weight-bold">
+                <p class="banner-carousel__text banner-carousel__text--mrl">TRẺ TRUNG</p>
                 <p class="banner-carousel__text banner-carousel__text--mrl">TIỆN LỢI</p>
-                <p class="banner-carousel__text banner-carousel__text--mrl">THỜI THƯỢNG</p>
-                <p class="banner-carousel__text banner-carousel__text--mrl">TRẺ TRUNG</p><a class="btn btn--light banner-carousel__btn" href="#">Xem tất cả Mirrorless</a>
+                <p class="banner-carousel__text banner-carousel__text--mrl">THỜI THƯỢNG</p><a class="btn btn--light banner-carousel__btn" href="#">Xem tất cả Mirrorless</a>
               </div>
             </div>
           </div><a class="carousel-control-prev" href="#camera-carousel" data-slide="prev"><img src="img/misc-img/prev-arrow-xs-v2.png"></a><a class="carousel-control-next" href="#camera-carousel" data-slide="next"><img src="img/misc-img/next-arrow-xs-v2.png"></a>
@@ -125,143 +125,143 @@
           </div>
           <div class="banner-full banner-full--mrl d-flex w-50">
             <div class="banner-full__text-area align-self-center">
-              <div class="banner-full__text-only font-weight-bold">
-                <p class="banner-full__text banner-full__text--mrl text-light">THỜI THƯỢNG</p>
-                <p class="banner-full__text banner-full__text--mrl text-light">TIỆN LỢI</p>
+              <div class="banner-full__text-only font-weight-bold"> 
                 <p class="banner-full__text banner-full__text--mrl text-light">TRẺ TRUNG</p>
+                <p class="banner-full__text banner-full__text--mrl text-light">TIỆN LỢI</p>
+                <p class="banner-full__text banner-full__text--mrl text-light">THỜI THƯỢNG</p>
               </div><a class="btn btn--light banner-full__btn banner-full__btn--mrl" href="#">Xem tất cả Mirrorless</a>
             </div><img class="banner-full__img" src="img/camera-hub-img/portal-mrl-max-v6.png" alt="">
           </div>
-        </div><a class="btn btn--dark portal-btn" href="#">Xem tất cả máy ảnh</a>
+        </div><a class="btn btn--dark portal__btn" href="#">Xem tất cả máy ảnh</a>
       </section>
-      <section class="item-row sale-row">
+      <section class="hub-row hub-row--sale">
         <h1 class="section__header">HOT SALE</h1>
-        <div class="container-xl slider-row sale-row slider">
-          <div class="card"><img class="card-img-top" src="img/body-img/canon-eos-5d-mark-iv-card.jpg" alt="">
+        <div class="container-xl slider-row slider">
+          <div class="card item--min"><img class="card-img-top" src="img/body-img/canon-eos-5d-mark-iv-card.jpg" alt="">
             <div class="card-body text-center">
               <p class="card-title font-weight-bold font-18">Canon EOS 5D Mark IV<br><span class="font-italic font font-weight-light font-13">(Mới 100% fullbox)</span></p>
               <p class="card-text price font-weight-bold font-24">50.090.000đ</p>
               <p class="card-text sale-text font-weight-bold"><span class="old-price font-16">58.090.000đ</span><span class="sale-badge"><img src="img/misc-img/sale-badge.png" alt=""></span><span class="sale-amount font-italic font-12">(Giảm 8.000.000đ)</span></p><a class="btn btn--dark seemore-btn font-18" href="#">Xem chi tiết </a>
             </div>
           </div>
-          <div class="card"><img class="card-img-top" src="img/body-img/canon-eos-5d-mark-iv-card.jpg" alt="">
+          <div class="card item--min"><img class="card-img-top" src="img/body-img/canon-eos-5d-mark-iv-card.jpg" alt="">
             <div class="card-body text-center">
               <p class="card-title font-weight-bold font-18">Canon EOS 5D Mark IV<br><span class="font-italic font font-weight-light font-13">(Mới 100% fullbox)</span></p>
               <p class="card-text price font-weight-bold font-24">50.090.000đ</p>
               <p class="card-text sale-text font-weight-bold"><span class="old-price font-16">58.090.000đ</span><span class="sale-badge"><img src="img/misc-img/sale-badge.png" alt=""></span><span class="sale-amount font-italic font-12">(Giảm 8.000.000đ)</span></p><a class="btn btn--dark seemore-btn font-18" href="#">Xem chi tiết </a>
             </div>
           </div>
-          <div class="card"><img class="card-img-top" src="img/body-img/canon-eos-5d-mark-iv-card.jpg" alt="">
+          <div class="card item--min"><img class="card-img-top" src="img/body-img/canon-eos-5d-mark-iv-card.jpg" alt="">
             <div class="card-body text-center">
               <p class="card-title font-weight-bold font-18">Canon EOS 5D Mark IV<br><span class="font-italic font font-weight-light font-13">(Mới 100% fullbox)</span></p>
               <p class="card-text price font-weight-bold font-24">50.090.000đ</p>
               <p class="card-text sale-text font-weight-bold"><span class="old-price font-16">58.090.000đ</span><span class="sale-badge"><img src="img/misc-img/sale-badge.png" alt=""></span><span class="sale-amount font-italic font-12">(Giảm 8.000.000đ)</span></p><a class="btn btn--dark seemore-btn font-18" href="#">Xem chi tiết </a>
             </div>
           </div>
-          <div class="card"><img class="card-img-top" src="img/body-img/canon-eos-5d-mark-iv-card.jpg" alt="">
+          <div class="card item--min"><img class="card-img-top" src="img/body-img/canon-eos-5d-mark-iv-card.jpg" alt="">
             <div class="card-body text-center">
               <p class="card-title font-weight-bold font-18">Canon EOS 5D Mark IV<br><span class="font-italic font font-weight-light font-13">(Mới 100% fullbox)</span></p>
               <p class="card-text price font-weight-bold font-24">50.090.000đ</p>
               <p class="card-text sale-text font-weight-bold"><span class="old-price font-16">58.090.000đ</span><span class="sale-badge"><img src="img/misc-img/sale-badge.png" alt=""></span><span class="sale-amount font-italic font-12">(Giảm 8.000.000đ)</span></p><a class="btn btn--dark seemore-btn font-18" href="#">Xem chi tiết </a>
             </div>
           </div>
-          <div class="card"><img class="card-img-top" src="img/body-img/canon-eos-5d-mark-iv-card.jpg" alt="">
+          <div class="card item--min"><img class="card-img-top" src="img/body-img/canon-eos-5d-mark-iv-card.jpg" alt="">
             <div class="card-body text-center">
               <p class="card-title font-weight-bold font-18">Canon EOS 5D Mark IV<br><span class="font-italic font font-weight-light font-13">(Mới 100% fullbox)</span></p>
               <p class="card-text price font-weight-bold font-24">50.090.000đ</p>
               <p class="card-text sale-text font-weight-bold"><span class="old-price font-16">58.090.000đ</span><span class="sale-badge"><img src="img/misc-img/sale-badge.png" alt=""></span><span class="sale-amount font-italic font-12">(Giảm 8.000.000đ)</span></p><a class="btn btn--dark seemore-btn font-18" href="#">Xem chi tiết </a>
             </div>
           </div>
-        </div><a class="btn btn--dark item-row__btn" href="#">Xem toàn bộ </a>
+        </div><a class="btn btn--dark hub-row__btn" href="#">Xem toàn bộ </a>
       </section>
-      <section class="item-row hot-row">
+      <section class="hub-row hub-row--hot">
         <h1 class="section__header">BÁN CHẠY</h1>
-        <div class="container-xl slider-row hot-row slider">
-          <div class="card"><img class="card-img-top" src="img/body-img/canon-eos-5d-mark-iv-card.jpg" alt="">
+        <div class="container-xl slider-row slider">
+          <div class="card item--min"><img class="card-img-top" src="img/body-img/canon-eos-5d-mark-iv-card.jpg" alt="">
             <div class="card-body text-center">
               <p class="card-title font-weight-bold font-18">Canon EOS 5D Mark IV<br><span class="font-italic font font-weight-light font-13">(Mới 100% fullbox)</span></p>
               <p class="card-text price font-weight-bold font-24">50.090.000đ</p>
               <p class="card-text sale-text font-weight-bold"><span class="old-price font-16">58.090.000đ</span><span class="sale-badge"><img src="img/misc-img/sale-badge.png" alt=""></span><span class="sale-amount font-italic font-12">(Giảm 8.000.000đ)</span></p><a class="btn btn--dark seemore-btn font-18" href="#">Xem chi tiết </a>
             </div>
           </div>
-          <div class="card"><img class="card-img-top" src="img/body-img/canon-eos-5d-mark-iv-card.jpg" alt="">
+          <div class="card item--min"><img class="card-img-top" src="img/body-img/canon-eos-5d-mark-iv-card.jpg" alt="">
             <div class="card-body text-center">
               <p class="card-title font-weight-bold font-18">Canon EOS 5D Mark IV<br><span class="font-italic font font-weight-light font-13">(Mới 100% fullbox)</span></p>
               <p class="card-text price font-weight-bold font-24">50.090.000đ</p>
               <p class="card-text sale-text font-weight-bold"><span class="old-price font-16">58.090.000đ</span><span class="sale-badge"><img src="img/misc-img/sale-badge.png" alt=""></span><span class="sale-amount font-italic font-12">(Giảm 8.000.000đ)</span></p><a class="btn btn--dark seemore-btn font-18" href="#">Xem chi tiết </a>
             </div>
           </div>
-          <div class="card"><img class="card-img-top" src="img/body-img/canon-eos-5d-mark-iv-card.jpg" alt="">
+          <div class="card item--min"><img class="card-img-top" src="img/body-img/canon-eos-5d-mark-iv-card.jpg" alt="">
             <div class="card-body text-center">
               <p class="card-title font-weight-bold font-18">Canon EOS 5D Mark IV<br><span class="font-italic font font-weight-light font-13">(Mới 100% fullbox)</span></p>
               <p class="card-text price font-weight-bold font-24">50.090.000đ</p>
               <p class="card-text sale-text font-weight-bold"><span class="old-price font-16">58.090.000đ</span><span class="sale-badge"><img src="img/misc-img/sale-badge.png" alt=""></span><span class="sale-amount font-italic font-12">(Giảm 8.000.000đ)</span></p><a class="btn btn--dark seemore-btn font-18" href="#">Xem chi tiết </a>
             </div>
           </div>
-          <div class="card"><img class="card-img-top" src="img/body-img/canon-eos-5d-mark-iv-card.jpg" alt="">
+          <div class="card item--min"><img class="card-img-top" src="img/body-img/canon-eos-5d-mark-iv-card.jpg" alt="">
             <div class="card-body text-center">
               <p class="card-title font-weight-bold font-18">Canon EOS 5D Mark IV<br><span class="font-italic font font-weight-light font-13">(Mới 100% fullbox)</span></p>
               <p class="card-text price font-weight-bold font-24">50.090.000đ</p>
               <p class="card-text sale-text font-weight-bold"><span class="old-price font-16">58.090.000đ</span><span class="sale-badge"><img src="img/misc-img/sale-badge.png" alt=""></span><span class="sale-amount font-italic font-12">(Giảm 8.000.000đ)</span></p><a class="btn btn--dark seemore-btn font-18" href="#">Xem chi tiết </a>
             </div>
           </div>
-          <div class="card"><img class="card-img-top" src="img/body-img/canon-eos-5d-mark-iv-card.jpg" alt="">
+          <div class="card item--min"><img class="card-img-top" src="img/body-img/canon-eos-5d-mark-iv-card.jpg" alt="">
             <div class="card-body text-center">
               <p class="card-title font-weight-bold font-18">Canon EOS 5D Mark IV<br><span class="font-italic font font-weight-light font-13">(Mới 100% fullbox)</span></p>
               <p class="card-text price font-weight-bold font-24">50.090.000đ</p>
               <p class="card-text sale-text font-weight-bold"><span class="old-price font-16">58.090.000đ</span><span class="sale-badge"><img src="img/misc-img/sale-badge.png" alt=""></span><span class="sale-amount font-italic font-12">(Giảm 8.000.000đ)</span></p><a class="btn btn--dark seemore-btn font-18" href="#">Xem chi tiết </a>
             </div>
           </div>
-        </div><a class="btn btn--dark item-row__btn" href="#">Xem toàn bộ </a>
+        </div><a class="btn btn--dark hub-row__btn" href="#">Xem toàn bộ </a>
       </section>
-      <section class="item-row love-row">
+      <section class="hub-row hub-row--love">
         <h1 class="section__header">ĐÁNH GIÁ TỐT</h1>
-        <div class="container-xl slider-row love-row slider">
-          <div class="card"><img class="card-img-top" src="img/body-img/canon-eos-5d-mark-iv-card.jpg" alt="">
+        <div class="container-xl slider-row slider">
+          <div class="card item--min"><img class="card-img-top" src="img/body-img/canon-eos-5d-mark-iv-card.jpg" alt="">
             <div class="card-body text-center">
               <p class="card-title font-weight-bold font-18">Canon EOS 5D Mark IV<br><span class="font-italic font font-weight-light font-13">(Mới 100% fullbox)</span></p>
               <p class="card-text price font-weight-bold font-24">50.090.000đ</p>
               <p class="card-text sale-text font-weight-bold"><span class="old-price font-16">58.090.000đ</span><span class="sale-badge"><img src="img/misc-img/sale-badge.png" alt=""></span><span class="sale-amount font-italic font-12">(Giảm 8.000.000đ)</span></p><a class="btn btn--dark seemore-btn font-18" href="#">Xem chi tiết </a>
             </div>
           </div>
-          <div class="card"><img class="card-img-top" src="img/body-img/canon-eos-5d-mark-iv-card.jpg" alt="">
+          <div class="card item--min"><img class="card-img-top" src="img/body-img/canon-eos-5d-mark-iv-card.jpg" alt="">
             <div class="card-body text-center">
               <p class="card-title font-weight-bold font-18">Canon EOS 5D Mark IV<br><span class="font-italic font font-weight-light font-13">(Mới 100% fullbox)</span></p>
               <p class="card-text price font-weight-bold font-24">50.090.000đ</p>
               <p class="card-text sale-text font-weight-bold"><span class="old-price font-16">58.090.000đ</span><span class="sale-badge"><img src="img/misc-img/sale-badge.png" alt=""></span><span class="sale-amount font-italic font-12">(Giảm 8.000.000đ)</span></p><a class="btn btn--dark seemore-btn font-18" href="#">Xem chi tiết </a>
             </div>
           </div>
-          <div class="card"><img class="card-img-top" src="img/body-img/canon-eos-5d-mark-iv-card.jpg" alt="">
+          <div class="card item--min"><img class="card-img-top" src="img/body-img/canon-eos-5d-mark-iv-card.jpg" alt="">
             <div class="card-body text-center">
               <p class="card-title font-weight-bold font-18">Canon EOS 5D Mark IV<br><span class="font-italic font font-weight-light font-13">(Mới 100% fullbox)</span></p>
               <p class="card-text price font-weight-bold font-24">50.090.000đ</p>
               <p class="card-text sale-text font-weight-bold"><span class="old-price font-16">58.090.000đ</span><span class="sale-badge"><img src="img/misc-img/sale-badge.png" alt=""></span><span class="sale-amount font-italic font-12">(Giảm 8.000.000đ)</span></p><a class="btn btn--dark seemore-btn font-18" href="#">Xem chi tiết </a>
             </div>
           </div>
-          <div class="card"><img class="card-img-top" src="img/body-img/canon-eos-5d-mark-iv-card.jpg" alt="">
+          <div class="card item--min"><img class="card-img-top" src="img/body-img/canon-eos-5d-mark-iv-card.jpg" alt="">
             <div class="card-body text-center">
               <p class="card-title font-weight-bold font-18">Canon EOS 5D Mark IV<br><span class="font-italic font font-weight-light font-13">(Mới 100% fullbox)</span></p>
               <p class="card-text price font-weight-bold font-24">50.090.000đ</p>
               <p class="card-text sale-text font-weight-bold"><span class="old-price font-16">58.090.000đ</span><span class="sale-badge"><img src="img/misc-img/sale-badge.png" alt=""></span><span class="sale-amount font-italic font-12">(Giảm 8.000.000đ)</span></p><a class="btn btn--dark seemore-btn font-18" href="#">Xem chi tiết </a>
             </div>
           </div>
-          <div class="card"><img class="card-img-top" src="img/body-img/canon-eos-5d-mark-iv-card.jpg" alt="">
+          <div class="card item--min"><img class="card-img-top" src="img/body-img/canon-eos-5d-mark-iv-card.jpg" alt="">
             <div class="card-body text-center">
               <p class="card-title font-weight-bold font-18">Canon EOS 5D Mark IV<br><span class="font-italic font font-weight-light font-13">(Mới 100% fullbox)</span></p>
               <p class="card-text price font-weight-bold font-24">50.090.000đ</p>
               <p class="card-text sale-text font-weight-bold"><span class="old-price font-16">58.090.000đ</span><span class="sale-badge"><img src="img/misc-img/sale-badge.png" alt=""></span><span class="sale-amount font-italic font-12">(Giảm 8.000.000đ)</span></p><a class="btn btn--dark seemore-btn font-18" href="#">Xem chi tiết </a>
             </div>
           </div>
-        </div><a class="btn btn--dark item-row__btn" href="#">Xem toàn bộ </a>
+        </div><a class="btn btn--dark hub-row__btn" href="#">Xem toàn bộ </a>
       </section>
     </main>
     <footer class="dark-side"> 
       <div class="container px-sm-5 mw-600 d-flex flex-column justify-content-center align-items-center"><img class="footer__logo" src="img/misc-img/logo-white.png" alt="">
         <ul class="footer__menu d-flex justify-content-between align-items-center">
-          <li class="footer__item d-flex justify-content-center align-items-center"><a class="footer__link text-center" href="#">Giới thiệu</a></li>
-          <li class="footer__item d-flex justify-content-center align-items-center"><a class="footer__link text-center" href="#">Hỗ trợ</a></li>
-          <li class="footer__item d-flex justify-content-center align-items-center"><a class="footer__link text-center" href="#">Chính sách</a></li>
-          <li class="footer__item d-flex justify-content-center align-items-center"><a class="footer__link text-center" href="#">Liên hệ</a></li>
+          <li class="footer__item d-flex justify-content-center align-items-center"><a class="footer__link text-center font-weight-bold" href="#">Giới thiệu</a></li>
+          <li class="footer__item d-flex justify-content-center align-items-center"><a class="footer__link text-center font-weight-bold" href="#">Hỗ trợ</a></li>
+          <li class="footer__item d-flex justify-content-center align-items-center"><a class="footer__link text-center font-weight-bold" href="#">Chính sách</a></li>
+          <li class="footer__item d-flex justify-content-center align-items-center"><a class="footer__link text-center font-weight-bold" href="#">Liên hệ</a></li>
         </ul>
         <p class="footer__info">Địa chỉ: Số Math.pow(n+1, 2), phố “ABC”, Hà Nội <br>Tổng đài tư vấn mua hàng: 099.999.9999<br>Email: info@halo.vn<br>ĐKKD số 0123456789 do Sở Kế hoạch và Đầu tư TP. Hà Nội cấp ngày 01/01/2021</p>
         <p class="copyright font-italic">Bản quyền thuộc Công ty TNHH HALO Việt Nam</p>
