--- a/halo/parts/card.html
+++ b/halo/parts/card.html
@@ -1,5 +1,5 @@
 
-<div class="card"><img class="card-img-top" src="img/body-img/canon-eos-5d-mark-iv-card.jpg" alt=""/>
+<div class="card item--min"><img class="card-img-top" src="img/body-img/canon-eos-5d-mark-iv-card.jpg" alt=""/>
   <div class="card-body text-center">
     <p class="card-title font-weight-bold font-18">Canon EOS 5D Mark IV<br/><span class="font-italic font font-weight-light font-13">(Mới 100% fullbox)</span></p>
     <p class="card-text price font-weight-bold font-24">50.090.000đ</p>
