--- a/halo/parts/main-carousel.html
+++ b/halo/parts/main-carousel.html
@@ -19,8 +19,8 @@
               <div class="progress-bar" role="progressbar" aria-valuemin="0" aria-valuemax="100" style="width: 100%; height: 5px"></div>
             </div>
           </div>
-          <p class="carousel-header">ĐỊNH NGHĨA LẠI </p>
-          <p class="carousel-header">CHUẨN MỰC HÌNH ẢNH HIỆN ĐẠI</p>
+          <p class="main-carousel__text">ĐỊNH NGHĨA LẠI </p>
+          <p class="main-carousel__text">CHUẨN MỰC HÌNH ẢNH HIỆN ĐẠI</p>
           <button class="btn btn--light seemore-btn" type="button">Xem chi tiết</button>
         </div>
         <div class="carousel-caption__img"></div>
@@ -57,9 +57,9 @@
             <div class="extra"><img class="extra-img" src="img/carousel-img/carousel-2-extra-2.png" alt=""/></div>
             <div class="extra"><img class="extra-img" src="img/carousel-img/carousel-2-extra-3.png" alt=""/></div>
           </div>
-          <p class="carousel-header display-till-md">SỰ HOÀN HẢO</p>
-          <p class="carousel-header hidden-till-md">Sự hoàn hảo chưa bao giờ ở gần đến vậy</p>
-          <p class="carousel-header display-till-md">CHƯA BAO GIỜ GẦN ĐẾN VẬY</p>
+          <p class="main-carousel__text display-till-md">SỰ HOÀN HẢO</p>
+          <p class="main-carousel__text hidden-till-md">Sự hoàn hảo chưa bao giờ ở gần đến vậy</p>
+          <p class="main-carousel__text display-till-md">CHƯA BAO GIỜ GẦN ĐẾN VẬY</p>
           <button class="btn btn--light seemore-btn" type="button">Xem chi tiết</button>
         </div>
         <div class="carousel-caption__img"></div>
@@ -77,8 +77,8 @@
             <div class="carousel-caption__img"></div>
             <div class="carousel-caption__img"></div>
           </div>
-          <p class="carousel-header font-italic font-weight-normal">"Một ngàm cho tất cả"</p>
-          <p class="carousel-header">Kết nối mọi thứ với ngàm E-mount của <span class="logo-sony-inline">SONY</span></p>
+          <p class="main-carousel__text font-italic font-weight-normal">"Một ngàm cho tất cả"</p>
+          <p class="main-carousel__text">Kết nối mọi thứ với ngàm E-mount của <span class="logo-sony-inline">SONY</span></p>
           <button class="btn btn--light seemore-btn" type="button">Xem chi tiết</button>
         </div>
         <div class="carousel-caption__img display-till-md"></div>
