--- a/halo/index.html
+++ b/halo/index.html
@@ -102,8 +102,8 @@
                     <div class="progress-bar" role="progressbar" aria-valuemin="0" aria-valuemax="100" style="width: 100%; height: 5px"></div>
                   </div>
                 </div>
-                <p class="carousel-header">ĐỊNH NGHĨA LẠI </p>
-                <p class="carousel-header">CHUẨN MỰC HÌNH ẢNH HIỆN ĐẠI</p>
+                <p class="main-carousel__text">ĐỊNH NGHĨA LẠI </p>
+                <p class="main-carousel__text">CHUẨN MỰC HÌNH ẢNH HIỆN ĐẠI</p>
                 <button class="btn btn--light seemore-btn" type="button">Xem chi tiết</button>
               </div>
               <div class="carousel-caption__img"></div>
@@ -140,9 +140,9 @@
                   <div class="extra"><img class="extra-img" src="img/carousel-img/carousel-2-extra-2.png" alt=""></div>
                   <div class="extra"><img class="extra-img" src="img/carousel-img/carousel-2-extra-3.png" alt=""></div>
                 </div>
-                <p class="carousel-header display-till-md">SỰ HOÀN HẢO</p>
-                <p class="carousel-header hidden-till-md">Sự hoàn hảo chưa bao giờ ở gần đến vậy</p>
-                <p class="carousel-header display-till-md">CHƯA BAO GIỜ GẦN ĐẾN VẬY</p>
+                <p class="main-carousel__text display-till-md">SỰ HOÀN HẢO</p>
+                <p class="main-carousel__text hidden-till-md">Sự hoàn hảo chưa bao giờ ở gần đến vậy</p>
+                <p class="main-carousel__text display-till-md">CHƯA BAO GIỜ GẦN ĐẾN VẬY</p>
                 <button class="btn btn--light seemore-btn" type="button">Xem chi tiết</button>
               </div>
               <div class="carousel-caption__img"></div>
@@ -160,8 +160,8 @@
                   <div class="carousel-caption__img"></div>
                   <div class="carousel-caption__img"></div>
                 </div>
-                <p class="carousel-header font-italic font-weight-normal">"Một ngàm cho tất cả"</p>
-                <p class="carousel-header">Kết nối mọi thứ với ngàm E-mount của <span class="logo-sony-inline">SONY</span></p>
+                <p class="main-carousel__text font-italic font-weight-normal">"Một ngàm cho tất cả"</p>
+                <p class="main-carousel__text">Kết nối mọi thứ với ngàm E-mount của <span class="logo-sony-inline">SONY</span></p>
                 <button class="btn btn--light seemore-btn" type="button">Xem chi tiết</button>
               </div>
               <div class="carousel-caption__img display-till-md"></div>
@@ -281,10 +281,10 @@
     <footer class="dark-side"> 
       <div class="container px-sm-5 mw-600 d-flex flex-column justify-content-center align-items-center"><img class="footer__logo" src="img/misc-img/logo-white.png" alt="">
         <ul class="footer__menu d-flex justify-content-between align-items-center">
-          <li class="footer__item d-flex justify-content-center align-items-center"><a class="footer__link text-center" href="#">Giới thiệu</a></li>
-          <li class="footer__item d-flex justify-content-center align-items-center"><a class="footer__link text-center" href="#">Hỗ trợ</a></li>
-          <li class="footer__item d-flex justify-content-center align-items-center"><a class="footer__link text-center" href="#">Chính sách</a></li>
-          <li class="footer__item d-flex justify-content-center align-items-center"><a class="footer__link text-center" href="#">Liên hệ</a></li>
+          <li class="footer__item d-flex justify-content-center align-items-center"><a class="footer__link text-center font-weight-bold" href="#">Giới thiệu</a></li>
+          <li class="footer__item d-flex justify-content-center align-items-center"><a class="footer__link text-center font-weight-bold" href="#">Hỗ trợ</a></li>
+          <li class="footer__item d-flex justify-content-center align-items-center"><a class="footer__link text-center font-weight-bold" href="#">Chính sách</a></li>
+          <li class="footer__item d-flex justify-content-center align-items-center"><a class="footer__link text-center font-weight-bold" href="#">Liên hệ</a></li>
         </ul>
         <p class="footer__info">Địa chỉ: Số Math.pow(n+1, 2), phố “ABC”, Hà Nội <br>Tổng đài tư vấn mua hàng: 099.999.9999<br>Email: info@halo.vn<br>ĐKKD số 0123456789 do Sở Kế hoạch và Đầu tư TP. Hà Nội cấp ngày 01/01/2021</p>
         <p class="copyright font-italic">Bản quyền thuộc Công ty TNHH HALO Việt Nam</p>
