--- a/halo/dslr-hub.html
+++ b/halo/dslr-hub.html
@@ -155,15 +155,15 @@
           </div>
           <div class="promo--aside hidden-till-md">
             <h1>Tin khuyến mại</h1>
-            <div class="promo__collection row"><img class="promo-item col-md-4" src="img/img--misc/promo-img-1.jpg" alt=""><img class="promo-item col-md-4" src="img/img--misc/promo-img-2.jpg" alt=""><img class="promo-item col-md-4" src="img/img--misc/promo-img-1.jpg" alt=""></div>
+            <div class="promo__collection"><img class="promo-item" src="img/img--misc/promo-img-1.jpg" alt=""><img class="promo-item" src="img/img--misc/promo-img-2.jpg" alt=""><img class="promo-item" src="img/img--misc/promo-img-1.jpg" alt=""></div>
           </div>
         </aside>
         <div class="dslr-hub__main-area">
-          <div class="main-area__sub-filter-area"><span class="hidden-till-md">Bộ lọc</span>
+          <div class="main-area__sub-filter-area"><span class="sub-filter-header hidden-till-sm">Bộ lọc:</span>
             <div class="sub-filter-wrapper">
               <div class="sub-filter"><img src="img/img--misc/badge--hot.png" alt=""><span>Bán chạy</span></div>
-              <div class="sub-filter"><img src="img/img--misc/badge--love.png" alt=""><span>Bán chạy</span></div>
-              <div class="sub-filter"><img src="img/img--misc/badge--sale-v2.png" alt=""><span>Bán chạy</span></div>
+              <div class="sub-filter"><img src="img/img--misc/badge--love.png" alt=""><span>Đánh giá tốt</span></div>
+              <div class="sub-filter"><img src="img/img--misc/badge--sale-v2.png" alt=""><span>Khuyến mại</span></div>
             </div>
           </div>
           <div class="main-area__items-area">
@@ -231,12 +231,12 @@
               </div>
             </div>
           </div>
-          <ul class="pagination">
-            <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+          <ul class="main-area__pagination pagination">
             <li class="page-item active"><a class="page-link" href="#">1</a></li>
             <li class="page-item"><a class="page-link" href="#">2</a></li>
             <li class="page-item"><a class="page-link" href="#">3</a></li>
-            <li class="page-item"><a class="page-link" href="#">Next</a></li>
+            <li class="page-item"><a class="page-link" href="#"> <i class="fas fa-angle-right"></i></a></li>
+            <li class="page-item"><a class="page-link" href="#"> <i class="fas fa-angle-double-right"></i></a></li>
           </ul>
         </div>
       </div>
