--- a/halo/parts/logreg.html
+++ b/halo/parts/logreg.html
@@ -33,8 +33,8 @@
         <p class="log">Hoặc đăng nhập với </p>
         <div class="logreg__platform justify-content-between log"><a class="platform__link" href="#"><img class="platform__img" src="img/img--misc/logo-fb.png" alt=""/></a><a class="platform__link" href="#"><img class="platform__img" src="img/img--misc/logo-gg.png" alt=""/></a><a class="platform__link" href="#"><img class="platform__img" src="img/img--misc/logo-apple.png" alt=""/></a></div>
       </div>
-      <div class="modal-footer"><a class="logreg-portal mx-auto reg" href="#" onclick="logregSwitch()">Quay lại đăng nhập</a>
-        <p class="mx-auto log">Chưa có tài khoản? <a class="logreg-portal" href="#" onclick="logregSwitch()">Đăng ký ngay </a></p>
+      <div class="modal-footer"><a class="logreg-portal mx-auto reg" onclick="logregSwitch()">Quay lại đăng nhập</a>
+        <p class="mx-auto log">Chưa có tài khoản? <a class="logreg-portal" onclick="logregSwitch()">Đăng ký ngay </a></p>
       </div>
     </div>
   </div>
