--- a/halo/index.html
+++ b/halo/index.html
@@ -82,7 +82,7 @@
           </div>
         </div>
       </div>
-      <div class="carousel slide" id="main-carousel" data-ride="carousel" data-interval="false" data-touch="true">
+      <div class="carousel slide" id="main-carousel" data-ride="carousel" data-interval="3500" data-touch="true">
         <!--indicators: 3 nút định vị trang-->
         <ul class="carousel-indicators">
           <li class="active" data-target="#main-carousel" data-slide-to="0"></li>
