--- a/halo/cart.html
+++ b/halo/cart.html
@@ -82,11 +82,61 @@
           </div>
         </div>
       </div>
-      <div class="breadcrumb-wrapper container-xl"></div>
-      <ul class="breadcrumb">
-        <li class="breadcrumb-item"><a href="index.html">Trang chủ</a></li>
-        <li class="breadcrumb-item active">Giỏ hàng</li>
-      </ul>
+      <div class="breadcrumb-wrapper container-xl">
+        <ul class="breadcrumb">
+          <li class="breadcrumb-item"><a href="index.html">Trang chủ</a></li>
+          <li class="breadcrumb-item active">Giỏ hàng</li>
+        </ul>
+      </div>
+      <div class="page-wrapper container-xl">
+        <h1 class="text-left w-100">Giỏ hàng của bạn </h1>
+        <div class="cart w-100"> 
+          <div class="cart__label">
+            <div class="col--order hidden-till-md">STT </div>
+            <div class="col--img hidden-till-md">Hình ảnh </div>
+            <div class="col--name hidden-till-md">Tên sản phẩm </div>
+            <div class="col--single-price hidden-till-md">Đơn giá </div>
+            <div class="col--quantity hidden-till-md">Số lượng</div>
+            <div class="col--multiple-price hidden-till-md">Thành tiền</div>
+            <div class="col--remove hidden-till-md">X </div>
+          </div>
+          <div class="cart__item"><img class="col--img-min display-till-md" src="img/img--cart/cart-img.jpg" alt="canon eos 1DX Mark 3">
+            <div class="col-group">
+              <div class="col--order hidden-till-md">1 </div><img class="col--img-max hidden-till-md" src="img/img--cart/cart-img.jpg" alt="canon eos 1DX Mark 3">
+              <div class="col--name">Canon EOS 1DX Mark III </div>
+              <div class="col--single-price">Đơn giá: 100.000.000đ</div>
+              <div class="col--quantity">
+                <div class="quantity__minus">-</div>
+                <div class="quantity__number">1 </div>
+                <div class="quantity__plus">+</div>
+              </div>
+              <div class="col--multiple-price">Thành tiền: 100.000.000đ</div>
+              <div class="col--remove display-till-md text-danger font-italic">Xóa khỏi giỏ hàng </div>
+              <div class="col--remove hidden-till-md"><i class="far fa-times-circle col--remove__btn"></i></div>
+            </div>
+          </div>
+          <div class="cart__item"><img class="col--img-min display-till-md" src="img/img--cart/cart-img.jpg" alt="canon eos 1DX Mark 3">
+            <div class="col-group">
+              <div class="col--order hidden-till-md">1 </div><img class="col--img-max hidden-till-md" src="img/img--cart/cart-img.jpg" alt="canon eos 1DX Mark 3">
+              <div class="col--name">Canon EOS 1DX Mark III </div>
+              <div class="col--single-price">Đơn giá: 100.000.000đ</div>
+              <div class="col--quantity">
+                <div class="quantity__minus">-</div>
+                <div class="quantity__number">2 </div>
+                <div class="quantity__plus">+</div>
+              </div>
+              <div class="col--multiple-price">Thành tiền: 200.000.000đ</div>
+              <div class="col--remove display-till-md text-danger font-italic">Xóa khỏi giỏ hàng </div>
+              <div class="col--remove hidden-till-md"><i class="far fa-times-circle col--remove__btn"></i></div>
+            </div>
+          </div>
+          <h1 class="cart__grand-total w-100">Tổng giá trị giỏ hàng: </h1>
+        </div>
+        <div class="cart__btn-group">
+          <button class="btn cart__continue-buying">Tiếp tục mua hàng </button>
+          <button class="btn cart__payment">Thanh toán ngay </button>
+        </div>
+      </div>
     </main>
     <footer class="dark-side"> 
       <div class="container px-sm-5 mw-600 d-flex flex-column justify-content-center align-items-center"><img class="footer__logo" src="img/img--misc/logo-white.png" alt="">
