--- a/halo/cart.html
+++ b/halo/cart.html
@@ -93,39 +93,39 @@
         <div class="cart w-100"> 
           <div class="cart__label">
             <div class="col--order hidden-till-md">STT </div>
-            <div class="col--img hidden-till-md">Hình ảnh </div>
+            <div class="col--img-max hidden-till-md">Hình ảnh </div>
             <div class="col--name hidden-till-md">Tên sản phẩm </div>
             <div class="col--single-price hidden-till-md">Đơn giá </div>
             <div class="col--quantity hidden-till-md">Số lượng</div>
             <div class="col--multiple-price hidden-till-md">Thành tiền</div>
-            <div class="col--remove hidden-till-md">X </div>
+            <div class="col--remove hidden-till-md"> </div>
           </div>
-          <div class="cart__item"><img class="col--img-min display-till-md" src="img/img--cart/cart-img.jpg" alt="canon eos 1DX Mark 3">
+          <div class="cart__item"><a class="col--img-min display-till-md" href="details.html"> <img src="img/img--cart/cart-img.jpg" alt="canon eos 1DX Mark 3"></a>
             <div class="col-group">
-              <div class="col--order hidden-till-md">1 </div><img class="col--img-max hidden-till-md" src="img/img--cart/cart-img.jpg" alt="canon eos 1DX Mark 3">
-              <div class="col--name">Canon EOS 1DX Mark III </div>
-              <div class="col--single-price">Đơn giá: 100.000.000đ</div>
+              <div class="col--order hidden-till-md">1 </div><a class="col--img-max hidden-till-md" href="details.html"><img src="img/img--cart/cart-img.jpg" alt="canon eos 1DX Mark 3"></a>
+              <div class="col--name"> <a href="details.html">Canon EOS 1DX Mark III</a></div>
+              <div class="col--single-price"> <span class="display-till-md">Đơn giá:&nbsp; </span>100.000.000đ</div>
               <div class="col--quantity">
                 <div class="quantity__minus">-</div>
                 <div class="quantity__number">1 </div>
                 <div class="quantity__plus">+</div>
               </div>
-              <div class="col--multiple-price">Thành tiền: 100.000.000đ</div>
+              <div class="col--multiple-price"><span class="display-till-md">Thành tiền:&nbsp;</span>100.000.000đ</div>
               <div class="col--remove display-till-md text-danger font-italic">Xóa khỏi giỏ hàng </div>
               <div class="col--remove hidden-till-md"><i class="far fa-times-circle col--remove__btn"></i></div>
             </div>
           </div>
-          <div class="cart__item"><img class="col--img-min display-till-md" src="img/img--cart/cart-img.jpg" alt="canon eos 1DX Mark 3">
+          <div class="cart__item"><a class="col--img-min display-till-md" href="details.html"> <img src="img/img--cart/cart-img.jpg" alt="canon eos 1DX Mark 3"></a>
             <div class="col-group">
-              <div class="col--order hidden-till-md">1 </div><img class="col--img-max hidden-till-md" src="img/img--cart/cart-img.jpg" alt="canon eos 1DX Mark 3">
-              <div class="col--name">Canon EOS 1DX Mark III </div>
-              <div class="col--single-price">Đơn giá: 100.000.000đ</div>
+              <div class="col--order hidden-till-md">2 </div><a class="col--img-max hidden-till-md" href="details.html"><img src="img/img--cart/cart-img.jpg" alt="canon eos 1DX Mark 3"></a>
+              <div class="col--name"> <a href="details.html">Canon EOS 1DX Mark III</a></div>
+              <div class="col--single-price"> <span class="display-till-md">Đơn giá:&nbsp; </span>100.000.000đ          </div>
               <div class="col--quantity">
                 <div class="quantity__minus">-</div>
                 <div class="quantity__number">2 </div>
                 <div class="quantity__plus">+</div>
               </div>
-              <div class="col--multiple-price">Thành tiền: 200.000.000đ</div>
+              <div class="col--multiple-price"> <span class="display-till-md">Thành tiền:&nbsp; </span>200.000.000đ</div>
               <div class="col--remove display-till-md text-danger font-italic">Xóa khỏi giỏ hàng </div>
               <div class="col--remove hidden-till-md"><i class="far fa-times-circle col--remove__btn"></i></div>
             </div>
