--- a/halo/cart.html
+++ b/halo/cart.html
@@ -132,10 +132,7 @@
           </div>
           <h1 class="cart__grand-total w-100">Tổng giá trị giỏ hàng: </h1>
         </div>
-        <div class="cart__btn-group">
-          <button class="btn cart__continue-buying">Tiếp tục mua hàng </button>
-          <button class="btn cart__payment">Thanh toán ngay </button>
-        </div>
+        <div class="cart__btn-group"><a class="btn cart__continue-buying" href="camera-hub.html">Tiếp tục mua hàng </a><a class="btn cart__payment" href="payment.html">Thanh toán ngay </a></div>
       </div>
     </main>
     <footer class="dark-side"> 
