--- a/halo/parts/payment-card.html
+++ b/halo/parts/payment-card.html
@@ -2,15 +2,15 @@
 <div class="collapse show" id="payment-card">
   <div class="payment-card__content"> 
     <div class="front"> <img class="payment-card__chip" src="/halo/img/img--payment/chip.png" alt=""/><img class="payment-card__brands" src="/halo/img/img--payment/visacard-2.png" alt=""/>
-      <p class="payment-card__num">0000 0000 0000 0000</p>
-      <p class="payment-card__valid-text">VALID DATES</p>
-      <p class="payment-card__valid-dates"><span class="payment-card__month">MM</span><span>&nbsp;/&nbsp;</span><span class="payment-card__year">YY</span></p>
-      <p class="payment-card__name">JAMES BOND</p>
+      <p class="front__num display-value">0000 0000 0000 0000</p>
+      <p class="front__valid-text">VALID DATES</p>
+      <p class="front__valid-dates"><span class="frontt__month display-value">MM</span><span>&nbsp;/&nbsp;</span><span class="front__year display-value">YY</span></p>
+      <p class="front__name display-value">JAMES BOND</p>
     </div>
     <div class="back">
       <div class="stripe"></div>
       <div class="back__content">
-        <p class="cvv">CVV</p>
+        <p class="cvv display-value">CVV</p>
         <div class="stamp"></div>
         <p class="back__text">Tấm thẻ này là tài sản của ngân hàng phát hành. Nếu ai nhặt được, vui lòng gửi trả lại cho ngân hàng. Việc sử dụng tấm thẻ này phải tuân thủ các quy định về việc sử dụng thẻ của ngân hàng phát hành.</p>
       </div>
@@ -20,8 +20,8 @@
 <div class="payment-card__input"> 
   <form>
     <div class="form-group">
-      <label for="input__num">Nhập số thẻ:&nbsp;<i>(Viết liền, không dấu cách)</i></label>
-      <input class="form-control front-input" id="input__num" type="text" required="required"/>
+      <label for="input__num">Nhập số thẻ:&nbsp;<i>(Viết liền)</i></label>
+      <input class="form-control front-input" id="input__num" type="number" required="required"/>
     </div>
     <div class="form-group input__dates">
       <label for="input__month">Ngày hết hạn:&nbsp; <i>(chỉ nhập 2 số cuối của năm)</i></label>
@@ -29,7 +29,7 @@
       <input class="form-control front-input" id="input__year" type="text" placeholder="Năm" required="required"/>
     </div>
     <div class="form-group">
-      <label for="input__name">Nhập tên chủ thẻ:</label>
+      <label for="input__name">Nhập tên chủ thẻ:&nbsp; <i>(Viết cách, không dấu)</i></label>
       <input class="form-control front-input" id="input__name" type="text" required="required"/>
     </div>
     <div class="form-group">
