--- a/halo/payment.html
+++ b/halo/payment.html
@@ -163,7 +163,7 @@
                   <div class="front"> <img class="payment-card__chip" src="/halo/img/img--payment/chip.png" alt=""><img class="payment-card__brands" src="/halo/img/img--payment/visacard-2.png" alt="">
                     <p class="front__num display-value">0000 0000 0000 0000</p>
                     <p class="front__valid-text">VALID DATES</p>
-                    <p class="front__valid-dates"><span class="frontt__month display-value">MM</span><span>&nbsp;/&nbsp;</span><span class="front__year display-value">YY</span></p>
+                    <p class="front__valid-dates"><span class="front__month display-value">MM</span><span>&nbsp;/&nbsp;</span><span class="front__year display-value">YY</span></p>
                     <p class="front__name display-value">JAMES BOND</p>
                   </div>
                   <div class="back">
@@ -180,12 +180,12 @@
                 <form>
                   <div class="form-group">
                     <label for="input__num">Nhập số thẻ:&nbsp;<i>(Viết liền)</i></label>
-                    <input class="form-control front-input" id="input__num" type="number" required>
+                    <input class="form-control front-input" id="input__num" type="text" required>
                   </div>
                   <div class="form-group input__dates">
                     <label for="input__month">Ngày hết hạn:&nbsp; <i>(chỉ nhập 2 số cuối của năm)</i></label>
-                    <input class="form-control front-input" id="input__month" type="text" placeholder="Tháng" required><span>&nbsp;/&nbsp;</span>
-                    <input class="form-control front-input" id="input__year" type="text" placeholder="Năm" required>
+                    <input class="form-control front-input" id="input__month" type="number" placeholder="Tháng" min="1" max="12" required><span>&nbsp;/&nbsp;</span>
+                    <input class="form-control front-input" id="input__year" type="number" placeholder="Năm" min="21" max="99" required>
                   </div>
                   <div class="form-group">
                     <label for="input__name">Nhập tên chủ thẻ:&nbsp; <i>(Viết cách, không dấu)</i></label>
@@ -195,6 +195,7 @@
                     <label for="input__name">Mã số CVV:</label>
                     <input class="form-control back-input" id="input__cvv" type="text" required>
                   </div>
+                  <input type="submit" value="Submit">
                 </form>
               </div>
             </div>
