--- a/halo/parts/visa-master-card.html
+++ b/halo/parts/visa-master-card.html
@@ -18,21 +18,21 @@
 <div class="payment-card__input"> 
   <form autocomplete="off">
     <div class="form-group">
-      <label for="input__num">Nhập số thẻ:&nbsp;<i>(Viết liền)</i></label>
-      <input class="form-control front-input" id="input__num" type="text" required="required"/>
+      <label for="visa-master-input__num">Nhập số thẻ:&nbsp;<i>(Viết liền)</i></label>
+      <input class="form-control front-input" id="visa-master-input__num" type="number" required="required"/>
     </div>
     <div class="form-group input__dates">
-      <label for="input__month">Ngày hết hạn:&nbsp; <i>(chỉ nhập 2 số cuối của năm)</i></label>
-      <input class="form-control front-input" id="input__month" type="number" placeholder="Tháng" min="1" max="12" required="required"/><span>&nbsp;/&nbsp;</span>
-      <input class="form-control front-input" id="input__year" type="number" placeholder="Năm" min="21" max="99" required="required"/>
+      <label for="visa-master-input__month">Ngày hết hạn:&nbsp; <i>(chỉ nhập 2 số cuối của năm)</i></label>
+      <input class="input__month form-control front-input" id="visa-master-input__month" type="number" placeholder="Tháng" min="1" max="12" required="required"/><span>&nbsp;/&nbsp;</span>
+      <input class="input__year form-control front-input" id="visa-master-input__year" type="number" placeholder="Năm" min="21" max="99" required="required"/>
     </div>
     <div class="form-group">
-      <label for="input__name">Nhập tên chủ thẻ:&nbsp; <i>(Viết cách, không dấu)</i></label>
-      <input class="form-control front-input" id="input__name" type="text" required="required"/>
+      <label for="visa-master-input__name">Nhập tên chủ thẻ:&nbsp; <i>(Viết cách, không dấu)</i></label>
+      <input class="form-control front-input" id="visa-master-input__name" type="text" required="required"/>
     </div>
     <div class="form-group">
-      <label for="input__name">Mã số CVV:</label>
-      <input class="form-control back-input" id="input__cvv" type="text" required="required"/>
+      <label for="visa-master-input__name">Mã số CVV:</label>
+      <input class="form-control back-input" id="visa-master-input__cvv" type="number" min="1" max="999" required="required"/>
     </div>
     <input class="btn btn--confirmation" type="submit" value="Xác nhận"/>
   </form>
